fix z-index of top and side navs

--- a/app/assets/stylesheets/base/_sidenav.sass
+++ b/app/assets/stylesheets/base/_sidenav.sass
@@ -53,8 +53,8 @@ header
   background-color: #fafafa
   display: flex
   flex-direction: column
-  li:last-child
-    margin-top: auto
+  z-index: 1000
+
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
@@ -65,7 +65,8 @@ input:-webkit-autofill:active
 .side-nav
   box-shadow: none !important
   a
-    height: 55px !important
+    height: 47px !important
+    line-height: 50px !important
   a:hover, a:focus
     color: #039be5 !important
     text-decoration: none !important
