--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -3,7 +3,7 @@
   right: 1px;
   height: auto !important;
   width: 100%;
-  z-index: 2;
+  z-index: 1100;
   background: #283761;
 }
 
